# Huatai

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  huatai.cpp  huatai_double.cpp
model/: tf2onnx.ipynb
model/fintech_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model/fintech_model/variables/: variables.index
官方提供的测试模型/: test.onnx
官方提供的测试模型/fintech_model/variables/: variables.data-00000-of-00001
